--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name="SoundService"
+            android:name="Service"
             android:icon="@drawable/ic_launcher"
             android:label="Service"
             android:process=":my_process"
