--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,12 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name="Service"
+            android:name="PsyLogService"
             android:icon="@drawable/ic_launcher"
             android:label="Service"
             android:process=":my_process"
             android:exported="true">
         </service>
-        <receiver android:name=".CallReceiver" android:enabled="true">
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE" />
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
