--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="dk.aau.cs.psylog.psylog.READ_DB"/>
+    <uses-permission android:name="dk.aau.cs.psylog.psylog.WRITE_DB"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
