--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "dk.aau.cs.psylog.psylog_soundmodule"
+        applicationId "dk.aau.cs.psylog.sound"
         minSdkVersion 18
         targetSdkVersion 21
         versionCode 1
