Ændrede package navn til at indeholde sensor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "dk.aau.cs.psylog.sound"
+        applicationId "dk.aau.cs.psylog.sensor.sound"
         minSdkVersion 18
         targetSdkVersion 21
         versionCode 1
